welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:4: error: not found: value max
    if (nums(i)>max){
                ^indexOfMaxValue:8: error: not found: value max
  return max
         ^