welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
  var nombre=0
  for (i<-0 to nums.length -1){
    if (nums(i)>max){
      nombre=i
    }
  }
  return max
}